# photoshop-python-api-mcp-server

./: .gitignore  .isort.cfg  CHANGELOG.md  CLAUDE.md  README.md  README_zh.md  noxfile.py  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/workflows/: build-exe.yml  codecov.yml  mr-test.yml  python-publish.yml
assets/: README.md
examples/: hello_world.py  session_info.py
nox_actions/: codetest.py  release.py  utils.py
photoshop_mcp_server/: __init__.py  app.py  decorators.py  registry.py  server.py
photoshop_mcp_server/ps_adapter/: __init__.py  action_manager.py  application.py  utils.py
photoshop_mcp_server/resources/: __init__.py  document_resources.py  registry.py
photoshop_mcp_server/tools/: __init__.py  document_tools.py  format_conversion_tools.py  image_conversion_tools.py  layer_tools.py  registry.py  session_tools.py
tests/: __init__.py
tests/integration/: __init__.py  test_format_conversion_integration.py  test_image_conversion_integration.py  test_photoshop_integration.py
tests/unit/: __init__.py  test_document_tools.py  test_fastmcp_initialization.py  test_format_conversion_tools.py  test_image_conversion_tools.py  test_layer_tools.py  test_server.py  test_session_tools.py
